--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,14 @@ main {
     cursor: pointer;
     vertical-align: middle;
 }
+.home-team, .away-team {
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 20px;
+}
 
+.loser {
+    color: grey;
+}
 
 .border-box {
     box-sizing: border-box;
