added colors for final/live games, parsed and added time to display if game was not played

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,19 @@ main {
     font-size: 20px;
 }
 
-.loser {
+#loser {
     color: grey;
+}
+#winner {
+    color: black;
+}
+
+.final {
+    color:red;
+}
+
+.unplayed {
+    color: blue;
 }
 
 .border-box {
