--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,11 +43,8 @@ main {
     font-size: 20px;
 }
 
-#loser {
-    color: grey;
-}
-#winner {
-    color: black;
+#pic {
+    width: 250px;
 }
 
 .final {
